[package]
name = "semver-common"
version = "0.9.2"
edition = "2024"
authors = ["Nicholas Raynes"]
description = "Common library to use for semantic release core and plugins."
license  = "MIT"
repository = "https://github.com/nraynes/semver-common"
keywords = ["semver", "common", "semantic", "project", "tools"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/",
    "Cargo.toml",
    "LICENSES/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[dependencies]
chrono = "0.4.44"
derive-getters = "0.5.0"
r_log = "0.2.2"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yaml_serde = "0.10.4"
